feat(algorithm): 引入图像信号总线与通用配置观察者机制
新增 ImageSignalBus 用于算法间图像信号的发布与订阅，支持线程安全。
新增 GenericAlgorithmConfigObserver 支持算法配置的动态更新。
重构 AlgoBase 增加参数与信号元信息接口，便于UI层提取信号源
新增 AlgorithmConfigTraits 用于类型安全地提取子配置。
为多个头文件添加统一的 MIT 许可证声明和版权信息。
完善 HoleDetection 算法配置结构与加载逻辑，并支持运行时更新。
移除旧版实例 EdgeDetection 算法实现。
添加 .vscode 忽略目录并补充 LICENSE 文件。
桥接了DvpCapture的外部配置文件与DvpCameraBuilder的内部配置文件，使得外部调用配置文件的时候无需引入Dvp的更多头文件，且更好的隐藏细节状态。

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -67,10 +67,6 @@ target_include_directories(${TARGET_NAME} PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/../../third_party/DVP_SDK/include
 )
 
-target_sources(${TARGET_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../DvpCapture.cpp)
-target_sources(${TARGET_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../DvpCameraBuilder.cpp)
-target_sources(${TARGET_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../DvpEventManager.cpp)
-
 # 链接所需库
 target_link_libraries(${TARGET_NAME} PRIVATE 
     Qt6::Core
@@ -83,6 +79,7 @@ target_link_libraries(${TARGET_NAME} PRIVATE
     QtAntDesign
     DVP2::DVPCamera 
     DVP2::dvpir
+    DVPDETECT
 )
 
 # Windows特定链接
