--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,33 +2,33 @@ include_directories(${CMAKE_SOURCE_DIR}/include)
 # 创建测试可执行文件
 
 # 1. 递归遍历所有 .cpp 文件（先获取全部文件）
-file(GLOB_RECURSE DVPDETECT_SOURCE
+file(GLOB_RECURSE CFP_SOURCE
     RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}  # 可选：使路径相对当前目录，更清晰
     "*.cpp"
 )
 
 # 2. 过滤掉所有包含 "/client/" 路径的文件（核心步骤）
-list(FILTER DVPDETECT_SOURCE EXCLUDE REGEX "client/")
+list(FILTER CFP_SOURCE EXCLUDE REGEX "client/")
 
 # 过滤文件,example.cpp
-list(FILTER DVPDETECT_SOURCE EXCLUDE REGEX "example.cpp")
+list(FILTER CFP_SOURCE EXCLUDE REGEX "example.cpp")
 
 # 打印文件列表
-message("DVPDETECT_SOURCE: ${DVPDETECT_SOURCE}")
+message("CFP_SOURCE: ${CFP_SOURCE}")
 
 
-add_library(DVPDETECT STATIC ${DVPDETECT_SOURCE})
+add_library(CFP STATIC ${CFP_SOURCE})
 if(MSVC)
-    target_compile_options(DVPDETECT PRIVATE
+    target_compile_options(CFP PRIVATE
         /source-charset:utf-8
         /execution-charset:utf-8
     )
 endif()
 
-target_include_directories(DVPDETECT PUBLIC ${PROJECT_SOURCE_DIR}/third_party/cpp_redis/includes)
-target_include_directories(DVPDETECT PUBLIC ${PROJECT_SOURCE_DIR}/third_party/cpp_redis/tacopie/includes)
+target_include_directories(CFP PUBLIC ${PROJECT_SOURCE_DIR}/third_party/cpp_redis/includes)
+target_include_directories(CFP PUBLIC ${PROJECT_SOURCE_DIR}/third_party/cpp_redis/tacopie/includes)
 
-target_link_libraries(DVPDETECT PUBLIC 
+target_link_libraries(CFP PUBLIC 
     DVP2::DVPCamera 
     DVP2::dvpir
     IKap::IKapC 
@@ -36,16 +36,15 @@ target_link_libraries(DVPDETECT PUBLIC
     concurrentqueue
     BS_thread_pool
     cpp_redis tacopie
-    PUBLIC
     ${OpenCV_LIBS}
     DVPUtils
     )
 
 if(SAVE_RESULT_IMG)
-    target_compile_definitions(DVPDETECT PRIVATE SAVE_RESULT_IMAGE_QUEUE)
+    target_compile_definitions(CFP PRIVATE SAVE_RESULT_IMAGE_QUEUE)
 endif()
 
-add_executable(main ${DVPDETECT_SOURCE})
+add_executable(main ${CFP_SOURCE})
 
 target_include_directories(main PRIVATE ${PROJECT_SOURCE_DIR}/third_party/cpp_redis/includes)
 target_include_directories(main PRIVATE ${PROJECT_SOURCE_DIR}/third_party/cpp_redis/tacopie/includes)
@@ -60,7 +59,7 @@ endif()
 
 # 链接DVP库和第三方库
 target_link_libraries(main PRIVATE 
-    DVPDETECT
+    CFP
 )
 
 
