--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -19,12 +19,12 @@ get_filename_component(THIRD_PARTY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../third_par
 file(GLOB_RECURSE TEST_SOURCES *.h *.cc *.cpp *.hpp)
 
 # 创建测试可执行文件
-add_executable(DvpDetectTests
+add_executable(CFPTests
     ${TEST_SOURCES}
 )
 
 # 添加包含目录
-target_include_directories(DvpDetectTests PRIVATE 
+target_include_directories(CFPTests PRIVATE 
     ${PROJECT_INCLUDE_DIR}
     ${OpenCV_INCLUDE_DIRS}
     "${THIRD_PARTY_DIR}/googletest/googletest/include"
@@ -34,18 +34,18 @@ target_include_directories(DvpDetectTests PRIVATE
 )
 
 # 链接gtest和项目库
-target_link_libraries(DvpDetectTests 
+target_link_libraries(CFPTests 
     gtest_main
     gmock_main
     DVP2::DVPCamera 
     DVP2::dvpir
-    DVPDETECT    concurrentqueue
+    CFP    concurrentqueue
     BS_thread_pool
     ${OpenCV_LIBS}
 )
 
 if(MSVC)
-    target_compile_options(DvpDetectTests PRIVATE
+    target_compile_options(CFPTests PRIVATE
         /source-charset:utf-8
         /execution-charset:utf-8
     )
@@ -53,4 +53,4 @@ endif()
 
 # 发现并添加所有测试
 include(GoogleTest)
-gtest_discover_tests(DvpDetectTests)
+gtest_discover_tests(CFPTests)
