feat(algo): 实现算法层特征数据发送功能
- 在AlgoBase中添加emit_feature方法用于向服务器发送特征数据
- 在HoleDetection算法中实现特征数据构造和发送逻辑
- 完成特征数据的格式定义，包含卷号、特征点、特殊图像数据等
- 添加SurfaceDetection算法框架

feat(cameras): 添加相机状态获取接口

- 在CameraCapture基类中添加get_status纯虚函数
- 在DvpCameraCapture和IkapCameraCapture中实现状态获取重写
- 引入protocol::FrontendStatus状态类型

refactor(signals): 重构ImageSignalBus为多实例单例模式

- 修改ImageSignalBus为支持命名空间的多实例单例模式
- 添加ns参数支持多相机实例信号区分
- 改进内部存储为unique_ptr管理
- 禁止拷贝构造和赋值操作符

fix(todo): 更新TODO清单完成状态

- 更新Redis通信架构相关TODO完成状态
- 修正文件路径引用错误
- 标记算法特征数据发送功能已完成
- 更新架构设计阶段完成情况

feat(protocol): 增强协议层数据接收状态管理

- 在AsioTcpTransport中添加ReceiveState枚举管理接收状态
- 实现receive_status_data和receive_feature_data方法
- 添加等待开始信号、接收特征数据、接收状态数据的状态管理

build(windows): 添加Windows平台编译定义

- 在CMakeLists.txt中为Windows平台添加_WIN32_WINNT=0x0A00定义
- 确保使用Windows 10 SDK进行编译

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,13 @@ set(OpenCV_OPENCL OFF CACHE BOOL "Disable OpenCV OpenCL detection" FORCE)
 # asio
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/third_party/asio/include)
 
+# 如果是windows平台
+if (WIN32)
+    # 使用 Windows 10 SDK
+    add_compile_definitions(_WIN32_WINNT=0x0A00)
+endif()
+
+
 set(QT_DIR $ENV{QT_DIR})
 include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/find_Qt_Dependency.cmake) # 确保模块路径正确
 
