feat: 集成spdlog日志系统并重构配置管理
- 添加spdlog作为第三方子模块
- 将AlogoParams重命名为GlobalConfig以统一配置管理
- 新增LoggingConfig结构体用于日志配置
- 实现CaponLogging.hpp提供统一日志接口
- 添加日志客户端和服务器示例程序
- 更新CMakeLists.txt以集成新的日志系统
- 修改配置文件结构以支持网络日志传输
- 添加TCP/UDP日志传输功能
- 重构配置加载逻辑以支持动态配置更新

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 include_directories(${CMAKE_SOURCE_DIR}/include)
+
 # 创建测试可执行文件
 
 # 1. 递归遍历所有 .cpp 文件（先获取全部文件）
@@ -18,12 +19,6 @@ message("CFP_SOURCE: ${CFP_SOURCE}")
 
 
 add_library(CFP STATIC ${CFP_SOURCE})
-if(MSVC)
-    target_compile_options(CFP PRIVATE
-        /source-charset:utf-8
-        /execution-charset:utf-8
-    )
-endif()
 
 target_include_directories(CFP PUBLIC ${PROJECT_SOURCE_DIR}/third_party/cpp_redis/includes)
 target_include_directories(CFP PUBLIC ${PROJECT_SOURCE_DIR}/third_party/cpp_redis/tacopie/includes)
@@ -37,8 +32,9 @@ target_link_libraries(CFP PUBLIC
     BS_thread_pool
     cpp_redis tacopie
     ${OpenCV_LIBS}
-    DVPUtils
-    )
+    CFPUtils
+    CaponLogging
+)
 
 if(SAVE_RESULT_IMG)
     target_compile_definitions(CFP PRIVATE SAVE_RESULT_IMAGE_QUEUE)
@@ -48,14 +44,6 @@ add_executable(main ${CFP_SOURCE})
 
 target_include_directories(main PRIVATE ${PROJECT_SOURCE_DIR}/third_party/cpp_redis/includes)
 target_include_directories(main PRIVATE ${PROJECT_SOURCE_DIR}/third_party/cpp_redis/tacopie/includes)
-
-if(MSVC)
-    target_compile_options(main PRIVATE
-        /source-charset:utf-8
-        /execution-charset:utf-8
-    )
-endif()
-
 
 # 链接DVP库和第三方库
 target_link_libraries(main PRIVATE 
@@ -68,5 +56,6 @@ if(SAVE_RESULT_IMG)
 endif()
 
 add_subdirectory(utils)
+add_subdirectory(logging)
 # client暂时不着急制作，需要统一多相机接口之后再慢慢看怎么开发
 #add_subdirectory(client)
