--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "third_party/cpp_redis"]
 	path = third_party/cpp_redis
 	url = https://github.com/Cylix/cpp_redis.git
+[submodule "third_party/spdlog"]
+	path = third_party/spdlog
+	url = https://github.com/gabime/spdlog.git
