docs(system): 添加应用程序的日志崩溃处理与IPC通信模块文档
- 新增客户端日志与崩溃处理机制说明
- 添加IPC崩溃信息传输协议定义
- 创建崩溃处理架构设计文档
- 更新系统架构图与模块说明
- 添加崩溃处理API使用示例
- 集成崩溃测试示例程序
- 配置IPC通信参数与协议支持
- 修改日志服务器为UDP协议实现
- 暂时禁用前端界面设计子目录

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -137,7 +137,8 @@ target_include_directories(BS_thread_pool INTERFACE
     "${CMAKE_CURRENT_SOURCE_DIR}/third_party/BS_THREAD_POOL/include")
 
 # 包含QtAntDesign库
-add_subdirectory(third_party/AntDesign)
+# 暂时不考虑前端机界面设计
+#add_subdirectory(third_party/AntDesign)
 
 # cpp-redis
 add_subdirectory(third_party/cpp_redis)
