feat(crash-server): 添加符号服务器和存储模块功能,使用RUST开发，确保稳定性不崩溃
- 添加UploadSymbols.cmake用于提取并上传PDB文件到符号服务器
- 实现存储模块，支持Minidump和PDB文件的分层目录存储
- 添加Dockerfile用于crash-server容器化部署
- 更新.gitignore添加crash-server相关忽略文件
- 重构Ipc_serverice.cpp到IpcServer目录下
- 添加存储模块设计文档和相关配置

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -1,4 +1,4 @@
 # IPC服务器，负责作为中继，收集本地程序崩溃情况并且发送给服务器
-add_executable(Ipc_service Ipc_serverice.cpp)
+add_executable(Ipc_service IpcServer/Ipc_serverice.cpp)
 
 target_link_libraries(Ipc_service PRIVATE spdlog)
