feat(build): 添加项目版本管理和构建系统增强
- 增加了vue.ts模块，可以通过MINIDUMP自动匹配PDB和EXE文件，增强了RUST服务器的模块。
- 添加VersionGenerate.cmake模块，支持自动生成版本信息
- 创建版本模板文件(version.h.in, version.cpp.in, CaponVersionConfig.cmake.in)
- 集成版本生成功能到CMakeLists.txt中
- 添加数据库文件(*.db)到.gitignore

refactor(config): 优化配置加载和时间转换逻辑

- 将file_time_type转换逻辑拆分为独立函数，提高代码可读性
- 实现线程安全的本地时间转换，修复Windows平台兼容性问题
- 更新IPC日志传输默认启用状态，确保崩溃管理器正常工作
- 改进配置监控中的时间格式化输出

refactor(debug): 重构崩溃处理机制

- 分离崩溃文件命名和minidump写入逻辑
- 增强SEH异常处理的信息发送功能
- 添加子进程启动功能用于发送崩溃报告到处理服务器
- 改进崩溃信息发送的安全性和可靠性

fix(cmake): 修复符号上传地址配置

- 更新UploadSymbols.cmake中的API端点地址
- 调整CMakeLists.txt中的格式和注释风格

--- a/src/app/crash-server/cargo.toml
+++ b/src/app/crash-server/cargo.toml
@@ -2,7 +2,7 @@
 name = "crash_handler_server"
 version = "0.1.0"
 edition = "2021"
-authors = ["Your Name <your.email@example.com>"]
+authors = ["caomengxuan666<2507560089@qq.com>"]
 description = "A lightweight crash information collection server for receiving minidump files"
 
 [dependencies]
@@ -17,6 +17,6 @@ config = "0.14"
 log = "0.4"
 env_logger = "0.11"
 tower = "0.4"
-tower-http = { version = "0.5", features = ["cors", "fs"] }
+tower-http = { version = "0.5", features = ["cors", "fs" ,"limit"] }
 anyhow = "1.0"
 tokio-util = { version = "0.7", features = ["io"] }
