--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -2,3 +2,8 @@
 add_executable(Ipc_service IpcServer/Ipc_serverice.cpp)
 
 target_link_libraries(Ipc_service PRIVATE spdlog)
+
+add_executable(crash-reporter crash-reporter/crash_reporter.cpp)
+
+target_compile_options(crash-reporter PRIVATE "$<$<CXX_COMPILER_ID:MSVC>:/source-charset:utf-8>")
+target_compile_options(crash-reporter PRIVATE "$<$<CXX_COMPILER_ID:MSVC>:/execution-charset:utf-8>")
